add search bar, begin working data

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe App</title>
+  <link rel="stylesheet" href="globals.css">
 </head>
 <body>
- <div class="title">
-  Recipes
- </div> 
+  <div class="header-container">
+    <div class="title-container">
+      <img src="./assets/logo.svg" alt="logo" class="logo">
+      <div class="title">
+        Recipes
+      </div> 
+    </div>
+    <input type="text" class="search-bar" placeholder="Search">
+  </div>
 </body>
 </html>
