--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="module">
+    try {
+      const response = await fetch('https://denni01.github.io/recipes/recipe-list.json');
+      window.recipes = await response.json();
+    } catch (e) {
+      console.error(e)
+    }
+  </script>
   <title>Recipe App</title>
   <link rel="stylesheet" href="globals.css">
 </head>
+
 <body>
   <div class="header-container">
     <div class="title-container">
@@ -17,4 +27,5 @@
     <input type="text" class="search-bar" placeholder="Search">
   </div>
 </body>
+
 </html>
