--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     try {
       const response = await fetch('https://denni01.github.io/recipes/recipe-list.json');
       window.recipes = await response.json();
+      const list = document.createElement('div');
+      document.body.appendChild(list);
+      for (const recipe of recipes) {
+        const listElement = document.createElement('div');
+        const link = document.createElement('a');
+        link.href = recipe.path;
+        const text = document.createTextNode(recipe.title);
+        link.appendChild(text);
+        listElement.appendChild(link);
+        list.appendChild(listElement);
+      }
     } catch (e) {
       console.error(e)
     }
@@ -22,7 +33,7 @@
       <img src="./assets/logo.svg" alt="logo" class="logo">
       <div class="title">
         Recipes
-      </div> 
+      </div>
     </div>
     <input type="text" class="search-bar" placeholder="Search">
   </div>
