add logo, basic css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
   <div class="header-container">
     <div class="title-container">
-      <img src="./assets/logo.svg" alt="logo" class="logo">
+      <img src="./assets/AppIcon.png" alt="logo" width="75" height="75">
       <div class="title">
         Recipes
       </div> 
     </div>
-    <input type="text" class="search-bar" placeholder="Search">
+    <form> 
+      <input id="search" type="text" placeholder="Search Recipes" value="searchField">
+    </form>
   </div>
 </body>
 </html>
