--- a/index.html
+++ b/index.html
@@ -9,36 +9,71 @@
       const response = await fetch('https://denni01.github.io/recipes/recipe-list.json');
       window.recipes = await response.json();
       const list = document.createElement('div');
+      list.className = 'recipe-list';
       document.body.appendChild(list);
       for (const recipe of recipes) {
         const listElement = document.createElement('div');
+        listElement.className = 'recipe';
         const link = document.createElement('a');
         link.href = recipe.path;
         const text = document.createTextNode(recipe.title);
         link.appendChild(text);
         listElement.appendChild(link);
-        list.appendChild(listElement);
+        list.appendChild(listElement)
+        const divider = document.createElement('div');  
+        divider.className = 'divider';
+        list.appendChild(divider);
       }
     } catch (e) {
       console.error(e)
     }
   </script>
+  <script type="module">
+    try{
+      const search = document.getElementById('search');
+      search.addEventListener('input', () => {
+        const query = search.value.toLowerCase();
+        const recipes = window.recipes;
+        const list = document.querySelector('.recipe-list');
+        list.innerHTML = '';
+        for (const recipe of recipes) {
+          if (recipe.title.toLowerCase().includes(query)) {
+            const listElement = document.createElement('div');
+            listElement.className = 'recipe';
+            const link = document.createElement('a');
+            link.href = recipe.path;
+            const text = document.createTextNode(recipe.title);
+            link.appendChild(text);
+            listElement.appendChild(link);
+            list.appendChild(listElement);
+          }
+        }
+      });
+    }
+    catch(e){
+      console.error(e)
+    }
+  </script>
   <title>Recipe App</title>
   <link rel="stylesheet" href="globals.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
-  <div class="header-container">
-    <div class="title-container">
-      <img src="./assets/AppIcon.png" alt="logo" width="75" height="75">
-      <div class="title">
-        Recipes
-      </div>
+<body class="header-container">
+  <div class="title-container">
+    <img src="./assets/AppIcon.png" alt="logo" width="75" height="75", style="border-radius: 15px;">
+    <div class="title">
+      Recipes
     </div>
-    <form> 
-      <input id="search" type="text" placeholder="Search Recipes" value="searchField">
-    </form>
   </div>
+  <label style="display:flex; align-content:center">
+    <div class="search-container">
+      <span class="material-symbols-outlined">
+        search
+      </span>
+      <input id="search" type="text" placeholder="Search Recipes" class="search-input" style="outline: none; border:none; align-self: center">
+    </div>
+  </label>
 </body>
 
 </html>
