--- a/index.html
+++ b/index.html
@@ -41,22 +41,39 @@
     function displayRecipes(recipes) {
       const recipeView = document.getElementById('recipe-view');
       const listView = document.getElementById('list-view');
+      listView.className = 'recipe-list';
       while (listView.firstChild) {
         listView.removeChild(listView.firstChild);
       }
       for (const recipe of recipes) {
         const listElement = document.createElement('div');
-        listElement.className = 'recipe'
+        listElement.style = 'display: flex; justify-content: space-between; align-items: center; width: 100%';
         const link = document.createElement('div');
-        link.addEventListener('click', function (event) {
+        
+        const text = document.createTextNode(recipe.title);
+        text.className = 'recipe-title-container';
+
+        const divider = document.createElement('div');
+        divider.className = 'divider';
+
+        const chevron = document.createElement('span');
+        chevron.className = 'material-symbols-outlined';
+        const chevronText = document.createTextNode('chevron_right');
+
+        chevron.appendChild(chevronText);
+        link.appendChild(text);
+        listElement.appendChild(link);
+        listElement.appendChild(chevron);
+        const label = document.createElement('label');
+        label.className = 'recipe';
+        label.addEventListener('click', function (event) {
           displayRecipe(recipe, recipeView);
           listView.style.display = 'none';
           recipeView.style.display = 'block';
         });
-        const text = document.createTextNode(recipe.title);
-        link.appendChild(text);
-        listElement.appendChild(link);
-        listView.appendChild(listElement);
+        label.appendChild(listElement);
+        listView.appendChild(label);
+        listView.appendChild(divider);
       }
     }
 
@@ -134,16 +151,21 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
-  <div class="header-container">
-    <div class="title-container">
-      <img src="./assets/AppIcon.png" alt="logo" width="75" height="75">
-      <div class="title">
-        Recipes
-      </div>
+<body class="header-container">
+  <div class="title-container">
+    <img src="./assets/AppIcon.png" alt="logo" width="75" height="75", style="border-radius: 15px;">
+    <div class="title">
+      Recipes
     </div>
-    <input id="search" type="text" placeholder="Search Recipes">
   </div>
+  <label style="width:25%">
+    <div class="search-container">
+      <span class="material-symbols-outlined" style="color: black">
+        search
+      </span>
+      <input id="search" type="text" placeholder="Search Recipes" class="search-input" style="display: flex; outline: none; border:none; align-self: center; background-color: inherit">
+    </div>
+  </label>
 </body>
 
 </html>
