Default to display:flex instead of display:block

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       recipeContainer.id = 'recipe-container';
       const backButton = document.createElement('button');
       backButton.addEventListener('click', function (event) {
-        listView.style.display = 'block';
+        listView.style.display = 'flex';
         recipeView.style.display = 'none';
       });
       const backButtonTitle = document.createTextNode('Back');
