--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       innerRecipeContainer.appendChild(titleContainer);
 
       const ingredientsTitleContainer = document.createElement('div');
-      const ingredientsTitle = document.createTextNode('Ingredients:');
+      const ingredientsTitle = document.createTextNode('Ingredients');
       ingredientsTitleContainer.appendChild(ingredientsTitle);
       ingredientsTitleContainer.className = 'ingredients-title';
       innerRecipeContainer.appendChild(ingredientsTitleContainer);
@@ -154,16 +154,18 @@
       const stepsTitleContainer = document.createElement('div');
       const stepsName = document.createTextNode('Steps');
       stepsTitleContainer.appendChild(stepsName);
+      stepsTitleContainer.className = 'ingredients-title';
       innerRecipeContainer.appendChild(stepsTitleContainer);
 
       const stepList = document.createElement('ol');
-      innerRecipeContainer.appendChild(stepList);
       for (const step of content.steps) {
         const stepListElement = document.createElement('li');
         const stepContent = document.createTextNode(step.step);
         stepListElement.appendChild(stepContent);
+        stepListElement.style = 'padding: 5px';
         stepList.appendChild(stepListElement);
       }
+      innerRecipeContainer.appendChild(stepList);
       recipeContainer.appendChild(innerRecipeContainer);
     }
   </script>
