fix hide search bug

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       backButton.addEventListener('click', function (event) {
         listView.style.display = 'flex';
         recipeView.style.display = 'none';
-        label.style.display = 'flex';
+        label.style.display = 'block';
       });
       const backButtonTitle = document.createElement('div');
       backButtonTitle.appendChild(document.createTextNode('Back'));
